Fix font-size & alignment of the navbar on the homepage

--- a/source/homepage/homepage-reset-bootstrap.css
+++ b/source/homepage/homepage-reset-bootstrap.css
@@ -97,10 +97,11 @@ body *:not(.navbar):not(.navbar *):not(header):not(header *):not(nav):not(nav *)
 }
 
 /* Override any !important styles from Bootstrap with even higher specificity */
-html body main:not(header):not(.navbar) *,
-html body article:not(header):not(.navbar) *,
-html body section:not(header):not(.navbar) *,
-html body div:not(header):not(.navbar):not(.navbar *):not(header *):not(#quarto-header):not(#quarto-header *):not(#quarto-search):not(#quarto-search *):not(.dropdown):not(.dropdown *) {
+html body main:not(.navbar) *,
+html body article:not(.navbar) *,
+html body section:not(.navbar) *,
+html body div:not(header *):not(.navbar):not(.navbar *):not(#quarto-header):not(#quarto-header *):not(#quarto-search):not(#quarto-search *):not(.dropdown):not(.dropdown *),
+{
   font-family: revert !important;
   font-size: revert !important;
   line-height: revert !important;
