--- a/source/homepage/input.css
+++ b/source/homepage/input.css
@@ -248,16 +248,15 @@ main {
     margin-bottom: 0 !important;
 }
 
-html, body {
+html body div#homepage-header,
+html body div#homepage-banner,
+html body div#homepage-features,
+html body div#homepage-footer {
     font-size: 16px !important;
 }
 
 main {
     @apply tw:font-sans!;
-}
-
-nav {
-    font-size: 17px !important;
 }
 
 h3 {
